chore: cleanups and improved functional code

--- a/example.env
+++ b/example.env
@@ -17,3 +17,4 @@ OUTPUT_DEVICE="Virtual Output"
 
 # General
 VOICE_ASSISTANT_HOTWORD="Cortana"
+VOICE_ASSISTANT_HOTWORD_CORRECTIONS="koutana, kotana, katana"
