feat: move chat characteristics into dotenv

--- a/example.env
+++ b/example.env
@@ -1,10 +1,19 @@
+# Assistant Characteristics
+ASSISTANT_NAME="Cortana"
+ASSISTANT_NAME_CORRECTIONS="koutana, kotana, katana, kautana, coach anna"
+ASSISTANT_USER_NAME="John"
+ASSISTANT_HUMOR='witty, dry'
+ASSISTANT_PERSONALITY='humorous, sarcastic, sassy'
+ASSISTANT_ROLE='assistant'
+ASSISTANT_AGE='40'
+ASSISTANT_TOPIC_FOCUS='technology, gadgets, software, artifical intelligence'
+
 # Openai
 OPENAI_API_KEY=
 OPENAI_ORG_ID=
 OPENAI_API_URL=api.openai.com/v1/
 OPENAI_WHISPER_MODEL=tiny
 OPENAI_CHATGPT_MODEL="gpt-4"
-OPENAI_CHATGPT_SYSTEM_MESSAGE="Your name is {VOICE_ASSISTANT_HOTWORD}. You never refer to yourself as an AI or assistant. Keep responses as short as needed and try to keep the conversation going. Be helpful and attentive and friendly."
 
 # Elevenlabs
 ELEVENLABS_API_URL=api.elevenlabs.io/v1/
@@ -14,7 +23,3 @@ ELEVENLABS_VOICE_NAME=Cortana
 # Sysem
 INPUT_DEVICE="Chat Input"
 OUTPUT_DEVICE="Virtual Output"
-
-# General
-VOICE_ASSISTANT_HOTWORD="Cortana"
-VOICE_ASSISTANT_HOTWORD_CORRECTIONS="koutana, kotana, katana"
